Multi line label support.
- Support word-breaking using libunibreak.
- Hyphenation not supported as libunibreak doesn’t have the feature.
- Performance evaluation is under going.
  Would change implementation based on the result.

Change-Id: I12b9f33e2f5fd25cd920eeae67c75d929c636c15
Tested: on OSX.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ include_directories(${dependencies_harfbuzz_distr_dir}/src)
 include_directories(${dependencies_freetype_distr_dir}/include)
 
 # libunibreak includes.
-include_directories(${dependencies_libunibreak_distr_dir}/include)
+include_directories(${dependencies_libunibreak_distr_dir}/src)
 
 # Detect clang
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
