Fix a build break in Zooshi.
- Remove libunibreak header reference from the public header.
- Add SDL include path to imgui (still needed for input handling).

Change-Id: I561730291ac755468fb155dd40401835040b59b1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,8 @@ set(dependencies_libunibreak_cmake_dir "${CMAKE_MODULE_PATH}/libunibreak"
     CACHE PATH "Directory containing the libunibreak cmake project.")
 set(dependencies_libunibreak_distr_dir "${third_party_root}/libunibreak"
     CACHE PATH "Directory containing the libunibreak library.")
+set(dependencies_sdl_dir "${third_party_root}/sdl"
+    CACHE PATH "Directory containing the SDL library.")
 
 # Option to enable / disable the sample build.
 option(imgui_build_samples "Build samples for this project." OFF)
