Use harfbuzz pre-generated headers on OSX.
- Also on Linux with -Duse_pregenerated_headers=true

Change-Id: Ie6696714185db219e5b9cf1646ff9540018a071f
Tested: on OSX.
Bug:b/21592388

--- a/cmake/harfbuzz/CMakeLists.txt
+++ b/cmake/harfbuzz/CMakeLists.txt
@@ -17,7 +17,7 @@ project(harfbuzz)
 
 set(harfbuzz_dir ${dependencies_harfbuzz_distr_dir})
 
-if(WIN32)
+if(use_pregenerated_headers)
 # Include pregeneraged harfbuzz header files on Windows.
 # On Windows, building harfbuzz requires prerequisites set up properly
 # (e.g.ragel, auto tools). To make the build process easier, we commit
