--- a/cmake/harfbuzz/CMakeLists.txt
+++ b/cmake/harfbuzz/CMakeLists.txt
@@ -22,7 +22,7 @@ if(use_pregenerated_headers)
 # On Windows, building harfbuzz requires prerequisites set up properly
 # (e.g.ragel, auto tools). To make the build process easier, we commit
 # pre-generated header files to our repository and include them only on Windows.
-include_directories(${CMAKE_SOURCE_DIR}/external/include/harfbuzz)
+include_directories(${dependencies_imgui_dir}/external/include/harfbuzz)
 else()
 # Execute configuration script and make
 # Need ragel, autoconf, automake, libtool, pkg-config and freetype to configure
