Renaming imgui -> flatui.
Change-Id: I5fe19de175b8504292b4b9755259d90562b0390a
Tested: on Linux & Android.

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ Makefile
 CMakeCache.txt
 cmake_install.cmake
 CMakeLists.txt.user
-imgui.cbp
-libimgui.a
 test/CMakeFiles/
 test/imguitest.cbp
-
+flatui.cbp
+libflatui.a
+samples/CMakeFiles/
