--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,12 +114,14 @@ endif()
 # flatui source files.
 set(flatui_SRCS
     include/flatui/flatui.h
+    include/flatui/flatui_common.h
     include/flatui/font_manager.h
     include/flatui/internal/glyph_cache.h
     include/flatui/internal/micro_edit.h
     src/font_manager.cpp
     src/micro_edit.cpp
-    src/flatui.cpp)
+    src/flatui.cpp
+    src/flatui_common.cpp)
 
 # Includes for this project.
 include_directories(src include include/flatui)
