Add multi font support in FontManager.
- Can open multiple font by Open("font name").
- Can switch font by SetTextFont("font name").

Tested: on OSX.
Change-Id: I37f7c6553e650f79891142330b41cf3c4c44ac5f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -117,6 +117,7 @@ set(flatui_SRCS
     include/flatui/flatui_common.h
     include/flatui/font_manager.h
     include/flatui/internal/glyph_cache.h
+    include/flatui/internal/flatui_util.h
     include/flatui/internal/micro_edit.h
     src/font_manager.cpp
     src/micro_edit.cpp
