Get compiling on VS2010.
VS2010 doesn't have great support for `auto`, especially
of aligned types.

The power-of-2 function in mathfu is intended for float
types, but we were using it here for int types. VS2010
didn't like it because it didn't know which pow() to
use. I've added a local version that does the casting.

Change-Id: I450c99d7f4f8bfc919b692c60ca6be1fdacd69e3
Tested: Compiles on VS2010 and Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,8 @@ endif()
 # Compiler flags.
 set(C_FLAGS_WARNINGS "")
 if(MSVC)
-  set(C_FLAGS_WARNINGS "/W4 /WX /wd4065 /wd4355")
+  # warning C4503: decorated name length exceeded, name was truncated
+  set(C_FLAGS_WARNINGS "/W4 /WX /wd4065 /wd4355 /wd4503")
 elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
        CMAKE_COMPILER_IS_CLANGXX)
   add_definitions(-g)
