Fixed up the Android build.
* Changed the library to depend upon fplbase rather than SDL directly.
* Added shared post build step to FlatUI's assets.
* Fixed flatui, harfbuzz, freetype and libunibreak to build as NDK
  modules.
* Added Android projects for the sample and test applications.
* Renamed sample application directory from samples to sample.
* Fixed entry points in sample applications.

Tested:
Verified everything builds and runs on Android (using OSX).
Verified everything builds and runs on OSX.

Bug: 25348034,25349976,24939097,24940415

Change-Id: I38ce8986a3ec9efaa36801f3f67404b5843725b1

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /bin/
 /obj/
 /CMakeFiles/
+CMakeScripts/
 Makefile
 CMakeCache.txt
 cmake_install.cmake
@@ -8,8 +9,32 @@ CMakeLists.txt.user
 test/CMakeFiles/
 flatui.cbp
 libflatui.a
-samples/CMakeFiles/
-samples/flatuisample.cbp
 test/flatuitest.cbp
 docs/html/
-
+libs/*
+**/*.xcodeproj/
+**/flatui.build/
+sample/CMakeScripts/*
+sample/bin/*
+sample/apks/*
+sample/obj/*
+sample/gen/*
+sample/libs/*
+sample/build.xml
+sample/local.properties
+sample/project.properties
+sample/proguard-project.txt
+sample/src_java/
+sample/assets/fonts/
+sample/assets/shaders/
+test/apks/
+test/assets/fonts/
+test/assets/shaders/
+test/bin/
+test/build.xml
+test/gen/
+test/libs/
+test/local.properties
+test/proguard-project.txt
+test/project.properties
+test/src_java/
