Fixing the assets and paths for the sample/test.
The assets were being copied to a strange directory. It has been
updated to copy to test/assets and sample/assets (correspondingly).

Additionally, the *.cpp files no longer use a fixed, relative path.
This allows you to run the samples from anywhere (both inside `/bin`
and outside).

Change-Id: Idb81c61a26a4b2ca8ebb8049c6afdc29cd70eab4
Tested: Tested on Ubuntu using `cmake` and `make`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,12 +185,12 @@ target_link_libraries(flatui libfreetype libharfbuzz libunibreak)
 mathfu_configure_flags(flatui)
 
 # Post process function.
-function(flatui_post_process target)
+function(flatui_post_process target folder_name)
 # Copy flatui resource files
 add_custom_command(TARGET ${target} POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                        ${dependencies_flatui_dir}/assets
-                       $<TARGET_FILE_DIR:${target}>)
+                       ${dependencies_flatui_dir}/${folder_name}/assets)
 endfunction()
 
 # Tests.
