Added a version string and tracking code.
Added a version string, as well as accessors to read it from code.

Tested on Android and Linux.

Change-Id: I4aaf30a117d79f3a57d801d3ea9052a8be27e8b7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,10 +119,12 @@ set(flatui_SRCS
     include/flatui/internal/glyph_cache.h
     include/flatui/internal/flatui_util.h
     include/flatui/internal/micro_edit.h
+    include/flatui/version.h
     src/font_manager.cpp
     src/micro_edit.cpp
     src/flatui.cpp
-    src/flatui_common.cpp)
+    src/flatui_common.cpp
+    src/version.cpp)
 
 # Includes for this project.
 include_directories(src include include/flatui)
