Fix for Visual Studio not being able to find dxguid.lib
Change-Id: I10fc6375fcad8983c09ed604a0f9ea1a436b259e
Tested: on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -195,6 +195,12 @@ add_custom_command(TARGET ${target} POST_BUILD
                        ${dependencies_flatui_dir}/${folder_name}/assets)
 endfunction()
 
+if(MSVC)
+  # TODO: remove this. SDL sets this, but for some reason
+  # link_directories doesn't perculate up to parents.
+  link_directories($ENV{DXSDK_DIR}\\lib\\x86)
+endif()
+
 # Tests.
 if(flatui_build_tests)
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
