--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,38 @@
-/bin/
-/obj/
-/CMakeFiles/
-CMakeScripts/
+**/*.xcodeproj/
+**/flatui.build/
+*.vcxproj*
+*.sln
+*.log
+*.tlog
+*.obj
+*.lib
+*.exp
+*.pdb
+*.cbp
+*.suo
+*.sdf
+
+bin/
+obj/
+docs/html/
+libs/
+
 Makefile
+CMakeFiles/
+CMakeScripts/
 CMakeCache.txt
 cmake_install.cmake
 CMakeLists.txt.user
-test/CMakeFiles/
-flatui.cbp
+
 libflatui.a
-test/flatuitest.cbp
-docs/html/
-libs/*
-**/*.xcodeproj/
-**/flatui.build/
-sample/CMakeScripts/*
-sample/bin/*
-sample/apks/*
-sample/obj/*
-sample/gen/*
-sample/libs/*
+
+sample/CMakeScripts/
+sample/CMakeFiles/
+sample/bin/
+sample/apks/
+sample/obj/
+sample/gen/
+sample/libs/
 sample/build.xml
 sample/local.properties
 sample/project.properties
@@ -27,6 +40,9 @@ sample/proguard-project.txt
 sample/src_java/
 sample/assets/fonts/
 sample/assets/shaders/
+sample/flatuisample.dir/
+
+test/CMakeFiles/
 test/apks/
 test/assets/fonts/
 test/assets/shaders/
@@ -38,3 +54,4 @@ test/local.properties
 test/proguard-project.txt
 test/project.properties
 test/src_java/
+test/flatuitest.dir/
