--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "dependencies/googletest"]
 	path = dependencies/googletest
 	url = http://github.com/google/fplutil.git
+[submodule "dependencies/flatbuffers"]
+	path = dependencies/flatbuffers
+	url = http://github.com/google/flatbuffers.git
