Add more robust locale support & fix misc micro editor issues.
- Replace SetTextLanguage() and SetTextScript() APIs with
  single SetTextLocale() API.
- SetTextLocale() API accept a C-string corresponding to the of the
  language defined in ISO 639 and country code defined in ISO 3166 connected
  by '-'. (e.g. 'en-US').
  The API sets language, script and layout direction used for following text
  renderings.
- Still keeps SetTextDirection() API because some languages support
  multiple direction. (e.g. Asian languages). And the API is also useful to check
  localized layouts.

Change-Id: I621c2d1e87ba0434e2c35475763930d34cabc979
Tested: on Android, OSX and Windows(VC++2013).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ set(flatui_SRCS
     src/micro_edit.cpp
     src/flatui.cpp
     src/flatui_common.cpp
+    src/script_table.cpp
     src/version.cpp)
 
 # Includes for this project.
