Add Font fallback mechanism.
- Add HbComplexFont and HbFont classes to manage a font fallback.
  To create a complex font, use SetTextFont() API with an array.
  const char* fonts[] = {
    "fonts/NotoSansCJKjp-Bold.otf",
    "fonts/NotoNaskhArabic-Regular.ttf"
  };
  flatui::SetTextFont(fonts, 2);
- Add complex font usage in flatui test.
- Add NotoNaskhArabic-Regular.ttf font as a sample font.

Tested: on OSX and Android.

Change-Id: I17788cb1afbedc21bbc341502c64fae3ff6b78c4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,12 +116,14 @@ set(flatui_SRCS
     include/flatui/font_manager.h
     include/flatui/internal/glyph_cache.h
     include/flatui/internal/flatui_util.h
+    include/flatui/internal/hb_complex_font.h
     include/flatui/internal/micro_edit.h
     include/flatui/version.h
     src/font_manager.cpp
     src/micro_edit.cpp
     src/flatui.cpp
     src/flatui_common.cpp
+    src/hb_complex_font.cpp
     src/script_table.cpp
     src/version.cpp)
 
